# Tensor-Engine

./: .dockerignore  .gitignore  BACKLOG.md  Cargo.toml  README.md  ROADMAP.md  Tensor-Engine.sln  ai-rules.md  assign_test.py  build.rs  cblas_stub.c  debug_load.py  debug_load2.py  examples_run_report.json  fix_indent.py  inspect_param.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  tensor_engine-0.1.0-cp311-cp311-win_amd64.whl  tensor_utils_test_bf16.safetensors  test_weights.py  tmp_diagnose_mapping.py  tmp_find_lmhead.py  tmp_inspect_keys.py  tmp_inspect_lm_head.py  tmp_inspect_params.py  tmp_list_block_params.py  tmp_list_keys.py  tmp_load_test.py  tmp_load_test_no_transpose.py  tmp_matmul_block.rs  tmp_old_excerpt.txt  tmp_ops_commit_old.rs  tmp_print_head_keys.py  tmp_print_safetensors_keys.py  tmp_print_shapes.py
.cargo/: config.toml
benches/: matmul_bench.rs
ci/: compare_criterion_reports.py  verify_as_any_mut.ps1  verify_as_any_mut.sh
configs/: multimodal_v1.json
data/: sample_bf16.safetensors  sample_corpus.txt  sample_finetune.txt  sample_sft.txt
docs/: backend_migration_plan.md  backend_plan.md  bench_descriptions.md  index.md  kronos_integration.md  kv_cache_design.md  quickstart.md  resampling.md  rvq_ema.md  test_descriptions.md  vlm_guide.md  windows_full_build.md
examples/: blas_check.rs  chat_llama.py  chat_safetensors.py  convert_torch_to_safetensors.py  diagnose_llama.py  generate_llava.py  linear_regression.py  llava_model_config.json  load_model.py  matrix_multiply.py  prepare_dataset.py  run_demo_chat.py  sample_diffusion.rs  sweep_sampling.py  test_tokenizer.py  text_to_audio.rs  train_codec.rs  train_diffusion.rs  train_llava.py  train_llava.py.orig  train_multimodal.py  train_nl_oob.py  transformer_demo.py
scripts/: README.md  add_as_any_mut.py  analyze_sampling_results.py  build_docs.ps1  build_docs.sh  build_openblas.sh  check_bf16_parity.py  check_braces.py  check_lm_tie.py  check_lm_tie_stats.py  collect_sampling_runs.py  compare_sampling_profiles.py  compare_tokenizers.py  diagnose_seed_generation.py  gen_fixtures.py  gen_fixtures_v2.py  gen_nested.py  gen_simple_pt.py  grad_check.py  inspect_nested.py  inspect_nested2.py  inspect_pairs.py  inspect_softmax_grad.py  per_layer_parity.py  prepare_manifest.py  replace_unwraps.py  run_all_examples.py  run_bench_all_features.ps1  run_chat_with_model.py  run_chat_with_model_debug.py  sampling_analysis.txt  sampling_analysis_detailed.txt  sampling_results.json  setup_dev_repo.ps1  softmax_backward_check.py  te-guide.ps1  te-guide.sh  test_chat_llama_smoke.py  validate_yaml.py  verify_as_any_mut.py
site/: 404.html  index.html
src/: autograd.rs  backend.rs  compat_blas.rs  dtype.rs  labels.rs  lib.rs  nn.rs  ops.rs  tensor.rs  tokenizer.rs
tensor_utils/: Cargo.toml  verify_fix.py
tests/: alibi_test.rs  as_any_mut_verification.rs  attention_cross_test.rs  attention_grad_parity_test.rs  attention_variants_test.rs  audio_multimodal_test.rs  autograd_test.rs  backend_test.rs  blas_matmul_test.rs  conv1d_transpose_test.rs  dataloader_resample_test.rs  dtype_tests.rs  embed_transpose_test.rs  new_ops_test.rs  (+32 more)
(+149 files in other folders)
