[package]
name = "tensor_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "=0.16.1"
matrixmultiply = "=0.3.10"
blas-src = { version = "=0.10.0", optional = true }

cblas-sys = { version = "=0.1.4", optional = true }

pyo3 = { version = "=0.21.2", optional = true, features = ["extension-module"] }
rand = "=0.9.2"
log = "=0.4.28"
rayon = { version = "=1.11.0", optional = true }
actix-web = { version = "=4.12.1", optional = true }
serde = { version = "=1.0.228", features = ["derive"], optional = true }
serde_json = "1.0"
base64 = { version = "=0.22.1", optional = true }
half = { version = "=2.7.1", optional = true }
safetensors = { version = "=0.7.0", optional = true }
tokenizers = { version = "=0.15.2", optional = true, default-features = false, features = ["onig"] }
tch = { version = "=0.7.2", optional = true }
# Image crate for vision features: loading/resizing/processing images
image = { version = "=0.24.9", optional = true }
# Audio crate for reading/writing WAV: used by audio examples and IO
hound = { version = "=3.5.1", optional = true }
rubato = { version = "=0.12.0", optional = true }
num-integer = { version = "=0.1.46", optional = true }
cffi = { version = "0.1.7", optional = true }


[dev-dependencies]
criterion = "=0.7.0"
env_logger = "=0.10.2"
tempfile = "=3.23.0"

[[bench]]
name = "matmul_bench"
harness = false

[lib]
name = "tensor_engine"
crate-type = ["cdylib", "rlib"]

[features]
openblas = ["blas-src", "cblas-sys"]
multi_precision = ["half"]
safe_tensors = ["safetensors"]
with_tokenizers = ["tokenizers"]
with_tch = ["tch"]
quantized = []

# DType features allow building with optional support for storage and conversions.
dtype_f16 = ["half"]
dtype_bf16 = ["half"]
dtype_f8 = []
# Enable building without a local Python interpreter by using pyo3's abi3 (stable Python ABI) support
# Usage: cargo build --features py_abi3 and set PYO3_NO_PYTHON=1 in the environment.
py_abi3 = ["pyo3/abi3-py311"]
python_bindings = ["pyo3/extension-module"]
vision = ["image"]
audio = ["hound", "rubato", "num-integer"]
parallel_io = ["rayon"]
server = ["actix-web", "serde", "image", "base64"]

# Native tokenizer: compile the built-in Rust tokenizer and expose via Python when enabled
native_tokenizer = []

[patch.crates-io]
# Use local path overrides during testing so we can modify ctor/cffi behavior for Windows/MSVC.
# This matches the versions required by cffi-impl (0.1.6) and its ctor dependency.
ctor = { path = "vendor/ctor" }
cffi-impl = { path = "vendor/cffi-impl-patch" }
